--- a/README.asciidoc
+++ b/README.asciidoc
@@ -11,7 +11,7 @@ From Forge CLI:
 
 [source,shell]
 ----
-addon-install-from-git --url https://github.com/D9110/docker-addon.git
+addon-install-from-git --url https://github.com/forge/docker-addon.git
 ----
 
 == Features
